# ARL

./: .env.example  .gitignore  .gitignore.security  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: celerytask.py  config.py  config.yaml.example  main.py
app/api/: __init__.py  gateway.py
app/core/: __init__.py  audit.py  exceptions.py  permissions.py  types.py  validators.py
app/database/: __init__.py  base_repository.py  connection.py  repositories.py
app/dicts/: domain_2w.txt  error_codes.json  webapp.json
app/helpers/: task.py
app/middleware/: __init__.py  rate_limiter.py  security.py
app/modules/: __init__.py
app/routes/: __init__.py  assetDomain.py  export.py  fingerprint.py  task.py  taskFofa.py  task_schedule.py  user.py
app/services/: __init__.py  cache_service.py  dns_query.py  dns_service.py  domain_service.py  export_service.py  fetchSite.py  findVhost.py  fofaClient.py  http_client.py  interfaces.py  ip_service.py  mq_client.py  npoc.py  portScan.py  scheduler_service.py  site_service.py  task_service.py  user_service.py
app/tasks/: poc.py
app/tools/: targetGen.py
app/utils/: __init__.py  conn.py  cron.py  db.py  domain.py  file_utils.py  fingerprint.py  github_task.py  http.py  ip.py  network.py  nmap.py  pagination.py  parsers.py  path_utils.py  performance.py  push.py  rate_limiter.py  redis_utils.py  sanitizer.py  string_utils.py  system.py  type_defs.py  url.py  user.py
docker/: Dockerfile  config-docker.yaml  docker-compose.yml
docs/: CODE_REUSE_IMPROVEMENTS.md  FINAL_SIMPLIFICATION.md  PHASE1_PERFORMANCE.md  PHASE2_PLAN.md  PHASE2_PROGRESS.md  PROJECT_STRUCTURE.md  SECURITY_FIXES.md  SERVICE_BOUNDARIES.md  SIMPLIFICATION_REPORT.md  SIMPLIFICATION_SUMMARY.md  TESTING_GUIDE.md  UPGRADE_SUMMARY.md  UPGRADE_TASKS.md
reports/: baseline_report.json  phase0_completion_report.md
scripts/: audit_baseline.py  fix_bare_excepts.py  force_password_reset.py  migrate_md5_to_bcrypt.py  migrate_to_new_arch.py
tests/: __init__.py  conftest.py  test_api_gateway.py  test_cache_service.py  test_file_utils.py  test_path_utils.py  test_redis_utils.py  test_service_interfaces.py  test_string_utils.py
tests/integration/: __init__.py  test_api_integration.py  test_database_integration.py  test_services_integration.py
tests/security/: __init__.py  test_authentication.py  test_input_validation.py  test_vulnerabilities.py
tests/unit/: __init__.py  test_audit.py  test_database.py  (+10 more)
tools/: check_python39_compat.py
(+4 files in other folders)
