[project]
name = "arl"
version = "2.8.0"
description = "Asset Reconnaissance Lighthouse"
requires-python = ">=3.6"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["app", "tests"]
skip_glob = ["*/migrations/*", "*/venv/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "security: Security tests",
    "api: API tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.mypy]
python_version = 3.6
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "flask_restx.*",
    "pymongo.*",
    "bson.*",
    "celery.*",
    "redis.*",
    "requests.*",
    "urllib3.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py36"
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "S",
    "C4",
    "DTZ",
    "T20",
    "SIM",
]
ignore = [
    "E501",
    "S101",
    "B008",
    "S603",
    "S607",
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",
    "node_modules",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "B008"]
"scripts/*" = ["T20"]

[tool.pylint.messages_control]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0903",
    "W0613",
]

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/venv/*",
    "*/scripts/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "pass",
]
